<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".onboarding">

    <TextView
        android:id="@+id/textMainWindow"
        android:layout_width="197dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/alegreyamedium"
        android:text="@string/hi"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView12" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="284dp"
        android:layout_height="135dp"
        android:fontFamily="@font/alegreyamedium"
        android:text="@string/unhi"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textMainWindow" />

    <Button
        android:id="@+id/registrButton"
        android:layout_width="334dp"
        android:layout_height="66dp"
        android:backgroundTint="#7C9A92"
        android:fontFamily="@font/alegreyamedium"
        android:text="@string/entrybuttontext"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="221dp"
        android:layout_height="231dp"
        android:layout_marginTop="116dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/button2"
        android:layout_width="381dp"
        android:layout_height="63dp"
        android:layout_marginBottom="64dp"
        android:background="@color/trans"
        android:fontFamily="@font/alegreyamedium"
        android:text="@string/registext"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>